// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el componente <GifGrid/> debe de mostrar items cuando se cargan imagenes useFetchGifs  1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    harry potter
  </h3>
  <div
    className="card-grid"
  >
    <ol
      className="ol-grid"
    >
      <GifGridItem
        id="ABC"
        key="ABC"
        title="cualquier cosa"
        url="http/cualquier/cosa"
      />
    </ol>
  </div>
</Fragment>
`;

exports[`Pruebas en el componente <GifGrid/> debes mostrar el componente correctamente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    harry potter
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    cargando
  </p>
  <div
    className="card-grid"
  >
    <ol
      className="ol-grid"
    />
  </div>
</Fragment>
`;
